testcases/negative/invalid-address.otk
OFFICETALK/1.0
DOCTYPE word

AT body/paragraph[
SET "Hello"
